# phonebooth-esp-idf

./: .gitignore  CMakeLists.txt  Makefile  tdd.cmake
docs/: README.md  _config.yml  common-issue.md  creating-tests.md  index.md  interrupts.md  materials.md  platform-specific-headers.md  tasks-and-queues.md
main/: CMakeLists.txt  Kconfig.projbuild  indicator.c  indicator.h  led.c  led.h  phonebooth.c  sensor.c  sensor.h
mock/: esp_err.h  esp_timer.c  esp_timer.h  gpio.c  mockesp_timer.h  mockgpio.h  mockqueue.h  mocktask.h  mocktime.h  queue.c  sdkconfig.h  task.c  time.c
mock/driver/: gpio.h
mock/freertos/: FreeRTOS.h  portmacro.h  projdefs.h  queue.h  task.h
mock/newlib/: time.h
test/: CMakeLists.txt  test_indicator.c  test_led.c  test_main.c  test_sensor.c
unity/: CMakeLists.txt  source-library.sh
